# AaaU

./: AaaU.opam  README.md  dune-project
.github/workflows/: release.yml
lib/: audit.ml  audit.mli  auth.ml  auth.mli  bridge.ml  bridge.mli  client_io.ml  client_io.mli  command_line.ml  command_line.mli  dune  protocol.ml  protocol.mli  pty.ml  pty.mli  session.ml  session.mli
test/: dune  test_AaaU.ml  test_agent_cleanup.ml  test_audit_log_dir.ml  test_check_program.ml  test_check_program_command.ml  test_command_line_split.ml  test_concurrent_input.ml  test_controlling_terminal.ml  test_escape_sequence_passthrough.ml  test_fork_agent_terminal_size.ml  test_handshake_line_reader.ml  test_process_group.ml  test_program_alias.ml  test_pty_error_handling.ml  test_pty_no_exceptions.ml  test_pty_open_close.ml  test_pty_permissions.ml  test_pty_resize.ml  test_terminal_echo.ml  test_terminal_size.ml
